package supermarket;

public class Cashier extends User {

}
