package supermarket;

public class Customer extends User{
	private DiscountPlan dp;
	private String surname;
	private String firstname;
	public Customer() {
		// TODO Auto-generated constructor stub
	}
	public DiscountPlan getDp() {
		return dp;
	}
	
}
