package supermarket;

public interface DiscountPlan {
	public double billAfterDiscount(double price);
}
