package supermarket;

public class Manager extends User {

}
