package supermarket;

public interface Observable {
	
	public void notifyObserver(Item item);
}
