package supermarket;

public interface Observer {
	public void update(int q);
}
