package supermarket;

/**
 * Common base for all logged-in users of the CLUI.
 * Holds username + password; subclasses add role-specific fields.
 */
public abstract class User {
	private String username;
	private int password;

	public User(String username, int password) {
		this.username = username;
		this.password = password;
	}

	public String getUsername() {
		return username;
	}

	public int getPassword() {
		return password;
	}
}
